# cuda_practice

./: .gitignore  CMakeLists.txt  README.md
src/: helloworld.cpp
